Build JAR for multiple platforms